Fixed image issue on iOS devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -1114,6 +1114,10 @@ video {
   .font-bold {
     letter-spacing: -0.03em;
   }
+
+  .bg-fixed {
+    background-attachment: scroll;
+  }
 }
 
 .hover\:bg-red:hover {
